# eventilo-backend

./: .gitignore  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: f055f2fbbce5_user_model_migration.py
app/: main.py  router.py
app/database/: config.py  connection.py  dependencies.py
app/tests/: conftest.py
app/users/: exceptions.py  models.py  router.py  schemas.py  services.py  validators.py
